fix: darken entity picker visibility hover state

--- a/sass/editor/_editor-entities-treeview.scss
+++ b/sass/editor/_editor-entities-treeview.scss
@@ -140,7 +140,7 @@
 
         &.entities-treeview-row-hovered {
             color: rgba($text-primary, 0.8);
-            background-color: $bcg-primary;
+            background-color: $bcg-dark;
         }
 
         &.entities-treeview-visibility-hidden {
